// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StationsInformation omits the last updated timestamp when fetchedAt is empty 1`] = `
<div
  class="t-stations-information text-base text-gray-800 flex flex-col gap-4 pb-10 lg:pb-0 lg:gap-6"
>
  <div
    class="flex flex-col gap-4 lg:gap-2 lg:py-4"
  >
    <h1
      class="text-blue-700 text-4xl font-bold md:text-6xl"
    >
      {a} stations found near your location for {b}
    </h1>
    <a
      class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
      href="/en"
    >
      Change location
    </a>
  </div>
  <output
    class="flex items-start gap-3 lg:gap-4"
    data-testid="no-results-message"
  >
    <div
      class="shrink-0 mt-0.5 lg:mt-0"
    >
      <svgr-mock
        class="w-8 h-10 lg:w-10 lg:h-10"
      />
    </div>
    <p
      class="text-lg font-bold leading-relaxed text-gray-900 lg:pt-1"
    >
      There are no results that match your location. Use the filters on the left to adjust your search, eg by changing the distance to 10 miles.
    </p>
  </output>
</div>
`;

exports[`StationsInformation renders heading, change location link and last updated timestamp 1`] = `
<div
  class="t-stations-information text-base text-gray-800 flex flex-col gap-4 pb-4 lg:pb-8 lg:gap-2"
>
  <div
    class="flex flex-col gap-4 lg:gap-2 lg:py-4"
  >
    <h1
      class="text-blue-700 text-4xl font-bold md:text-6xl"
    >
      {a} stations found near your location for {b}
    </h1>
    <a
      class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
      href="/en"
    >
      Change location
    </a>
  </div>
  <div>
    Data last retrieved
     
    11/4/2026 09:30
  </div>
  <div>
    If you spot a price at the pump that doesn't match these results, you can 
    <a
      class="inline items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
      href="https://www.gov.uk/guidance/report-an-error-in-fuel-prices-or-forecourt-details"
      rel="noopener noreferrer"
      target="_blank"
    >
      report the error
      <span
        class="sr-only"
      >
         (opens in a new tab)
      </span>
    </a>
     
    on GOV.UK
  </div>
</div>
`;

exports[`StationsInformation renders singular heading when totalItems is 1 1`] = `
<div
  class="t-stations-information text-base text-gray-800 flex flex-col gap-4 pb-4 lg:pb-8 lg:gap-2"
>
  <div
    class="flex flex-col gap-4 lg:gap-2 lg:py-4"
  >
    <h1
      class="text-blue-700 text-4xl font-bold md:text-6xl"
    >
      {a} station found near your location for {b}
    </h1>
    <a
      class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
      href="/en"
    >
      Change location
    </a>
  </div>
  <div>
    Data last retrieved
     
    11/4/2026 09:30
  </div>
  <div>
    If you spot a price at the pump that doesn't match these results, you can 
    <a
      class="inline items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
      href="https://www.gov.uk/guidance/report-an-error-in-fuel-prices-or-forecourt-details"
      rel="noopener noreferrer"
      target="_blank"
    >
      report the error
      <span
        class="sr-only"
      >
         (opens in a new tab)
      </span>
    </a>
     
    on GOV.UK
  </div>
</div>
`;
